<resources>
    <string name="app_name">Ammadeu</string>
    <string name="nav_open">open</string>
    <string name="nav_close">close</string>
    <string name="txtHintEmail">Email</string>
    <string name="txtHintPassword">Password</string>
    <string name="btnlogin">Log In</string>
    <string name="tv_loginhere">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="btn_cadastr">Cadastrar</string>
    <string name="tvconfirm_password">Confirm Password</string>
    <string name="tvsign_up">Sign Up</string>
    <string name="next">Next</string>
    <string name="oab_number">OAB Number</string>
    <string name="name">Name</string>
</resources>
