<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="1"
        tools:context=".LoginActivity">

    <ImageView
            android:layout_width="130dp"
            android:layout_height="98dp"
            android:id="@+id/img_uploaded"
            android:layout_marginBottom="8sp"
            app:layout_constraintBottom_toTopOf="@+id/textView" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.498" app:layout_constraintVertical_bias="0.717"
            android:src="@drawable/ic_account_circle_login"/>
    <AutoCompleteTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/txtemail"
            android:hint="@string/txtHintEmail"
            android:layout_marginBottom="12dp"
            app:layout_constraintBottom_toTopOf="@+id/txtpass"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="30dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="30dp"
            app:layout_constraintHorizontal_bias="1.0"/>
    <AutoCompleteTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/txtpass"
            android:hint="@string/txtHintPassword"
            tools:ignore="MissingConstraints"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="30dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="30dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginBottom="332dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <Button
            android:text="@string/btnlogin"
            android:textColor="@color/main_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="50dp"
            android:paddingEnd="50dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:id="@+id/btn_sign_in"
            android:textStyle="bold"
            android:background="@drawable/button_shape_round"
            android:layout_marginTop="84dp"
            app:layout_constraintTop_toBottomOf="@+id/txtpass"
            android:onClick="signIn"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="52dp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.391"/>

    <com.google.android.gms.common.SignInButton
            android:textColor="#5555ff"
            android:layout_width="143dp"
            android:layout_height="54dp"
            android:id="@+id/google_button"
            android:layout_marginBottom="72dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/btn_sign_in"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:id="@+id/textView"
            android:textSize="20dp"
            android:text="@string/tv_loginhere"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toTopOf="@+id/txtemail" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:text="@string/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/forgot_password" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="47dp"
            app:layout_constraintTop_toBottomOf="@+id/google_button" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.028"
            app:layout_constraintHorizontal_bias="0.534"/>


</android.support.constraint.ConstraintLayout>