<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="1"
        tools:context=".SignUpActivity">

    <EditText
            android:layout_width="395dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/txtemail"
            android:hint="@string/txtHintEmail"
            tools:ignore="MissingConstraints"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="1.0" android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"/>
    <EditText
            android:layout_width="395dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/txtconfirmpass"
            android:hint="@string/tvconfirm_password"
            tools:ignore="MissingConstraints"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/txtpass"
            app:layout_constraintHorizontal_bias="0.0"/>
    <EditText
            android:layout_width="395dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/txtpass"
            android:hint="@string/txtHintPassword"
            tools:ignore="MissingConstraints"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/txtemail" app:layout_constraintHorizontal_bias="0.0"/>

    <Button
            android:text="@string/tvsign_up"
            android:layout_width="290dp"
            android:layout_height="47dp"
            android:id="@+id/btn_signup"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:background="@drawable/buttonshapecollor"
            android:onClick="signUp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txtconfirmpass" app:layout_constraintHorizontal_bias="0.495"
            android:layout_marginBottom="3dp" app:layout_constraintBottom_toTopOf="@+id/btncadastr"
            app:layout_constraintVertical_bias="0.812"/>
    <com.google.android.gms.common.SignInButton
            android:text="@string/btnsign_up_with_google"
            android:textColor="#5555ff"
            android:background="@null"
            android:layout_width="246dp"
            android:layout_height="63dp"
            android:id="@+id/btncadastr"
            android:drawableLeft="@drawable/icons8google48"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.496"
            android:layout_marginBottom="136dp" app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:textSize="20dp"
            android:text="@string/tvsign_up"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/txtemail"/>


</android.support.constraint.ConstraintLayout>